@@ -1,3 +1,15 @@
+2013-03-22  James Robinson  <jamesr@chromium.org>
+
+        [chromium] Wire windows scrollByPage enum up to compositor thread input handling
+        https://bugs.webkit.org/show_bug.cgi?id=113117
+
+        Reviewed by Adrienne Walker.
+
+        * src/WebCompositorInputHandlerImpl.cpp:
+        (WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):
+        * tests/WebCompositorInputHandlerImplTest.cpp:
+        (MockWebInputHandlerClient):
+
 2013-03-24  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed.  Rolled Chromium DEPS to r190276.  Requested by
