@@ -1,3 +1,12 @@
+2013-03-22  James Robinson  <jamesr@chromium.org>
+
+        [chromium] Wire windows scrollByPage enum up to compositor thread input handling
+        https://bugs.webkit.org/show_bug.cgi?id=113117
+
+        Reviewed by Adrienne Walker.
+
+        * chromium/public/WebInputHandlerClient.h:
+
 2013-03-23  Dominic Mazzoni  <dmazzoni@google.com>
 
         Implement Web Speech Synthesis for Chromium
